# pj_custom_actions-feature-instagram

./: README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
custom_actions/: app.py  config.py
custom_actions/instagram/: schema.py  views.py
